apps/monitoring/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  # Grafanaのサービスが存在する'monitoring'名前空間に作成
  namespace: monitoring
  annotations:
    # このIngressルールをNginx Ingress Controllerが処理するよう指定
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "grafana.lab.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-grafana
                port:
                  number: 80
